--- a/public/widget.css
+++ b/public/widget.css
@@ -259,7 +259,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('https://shikpooshaan.ir/Navigator_The%20Teamwork%20Assistant.jpeg') center/cover;
+    background: url('https://shikpooshaan.ir/LOGO.jpeg') center/cover;
     border-radius: 14px;
 }
 
